# yap

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/: app.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accessibility.rs  ai.rs  audio_capture.rs  commands.rs  diarize.rs  dictation.rs  hotkey.rs  lib.rs  main.rs  mic_capture.rs  model.rs  paste.rs  refine.rs  transcribe.rs
src/components/: dictation-badge.tsx  layout.tsx  record-button.tsx  session-list.tsx  speaker-transcript.tsx
src/hooks/: use-global-shortcut.ts  use-recorder.ts
src/lib/: audio.ts  db.ts  dictation-styles.ts  hotkeys.ts  pipeline.ts  settings.ts  tray.ts  updates.ts
src/pages/: home.tsx  onboarding.tsx  overlay.tsx  session.tsx  settings.tsx
src/stores/: dictation-store.ts  session-store.ts
src/styles/: globals.css
src/types/: dictation.ts
