[package]
name = "yap"
version = "0.1.0"
description = "Push-to-talk dictation tool"
authors = ["you"]
edition = "2021"

[lib]
name = "yap_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = { version = "0.13", features = ["metal"] }
hound = "3.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
base64 = "0.22"

# Microphone capture
cpal = "0.17"

# Inter-thread audio channels
crossbeam-channel = "0.5"


# Clipboard
arboard = "3"

# macOS accessibility permission check
core-foundation = "0.9"

