[package]
name = "yap"
version = "0.3.0"
description = "Push-to-talk dictation tool"
authors = ["bjornbom"]
license = "MIT"
edition = "2021"

[lib]
name = "yap_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["metal"]
metal = ["whisper-rs/metal"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = "0.13"
tauri-plugin-autostart = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"

# Microphone capture
cpal = "0.17"

# Inter-thread audio channels
crossbeam-channel = "0.5"


# Clipboard
arboard = "3"

# macOS accessibility permission check
core-foundation = "0.9"
tauri-plugin-updater = "2.10.0"

